First content code updated

--- a/index.html
+++ b/index.html
@@ -68,21 +68,22 @@
                         <p>Buisness Law</p>
                     </div>
                     <div class="service-box" id="box-2">
-                        <div class="service-icon"><i class="fa-solid fa-scale-balanced"></i></div>
+                        <div class="service-icon"><i class="fa-solid fa-building-shield"></i></div>
                         <p>Legal Audit</p>
                     </div>
                     <div class="service-box" id="box-3">
-                        <div class="service-icon"><i class="fa-solid fa-scale-balanced"></i></div>
+                        <div class="service-icon"><i class="fa-solid fa-sack-dollar"></i></div>
                         <p>Family Law</p>
                     </div>
                     <div class="service-box" id="box-4">
-                        <div class="service-icon"><i class="fa-solid fa-scale-balanced"></i></div>
+                        <div class="service-icon"><i class="fa-solid fa-building-columns"></i></div>
                         <p>All Services</p>
                     </div>
 
                 </div>
             </div>
         </div>
+
 
     </body>
 
