Featured Law Services section added

--- a/index.html
+++ b/index.html
@@ -83,8 +83,57 @@
                 </div>
             </div>
         </div>
+        <div class="support">
+            <div class="support-content">
+                <div class="sendmsg"><span>Send</span> Massege</div>
+                <div class="msgdes">Sed ut unde iste natus sit volur tatem accus antium laudan tium totam rem <br>
+                    aperiam
+                    eaque ipsa ab illo inventore veritatis.</div>
+                <div class="support-btn">Support Arena</div>
+            </div>
+        </div>
+        <div class="featured-law-service">
+            <div class="featuredlawservice">Featured Law Service</div>
+            <article>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu <br>fugiat nulla
+                pariatur excepteur sint
+                occaecat sunt.</article>
+            <div class="all-services">
+                <div class="service" id="service-1"><img src="/img/lawyer-services-1.jpg" alt="">
+                    <div class="lawyer-box">
+                        <div class="layer-services">
+                            <h1>Business Law</h1>
+                            <div class="descr">Dolor sit amet consec tetur adipis cing elit sed do eiusmod tempor ut
+                                labore et magna aliqua.</div>
+                            <div class="view-more"><a href="">View More <i class="fa-solid fa-arrow-pointer"></i></a>
+                            </div>
+                        </div>
+                    </div>
 
-
+                </div>
+                <div class="service" id="service-2"><img src="/img/lawyer-services-2.jpg" alt="">
+                    <div class="lawyer-box">
+                        <div class="layer-services">
+                            <h1>Legal Audit</h1>
+                            <div class="descr">Dolor sit amet consec tetur adipis cing elit sed do eiusmod tempor ut
+                                labore et magna aliqua.</div>
+                            <div class="view-more"><a href="">View More <i class="fa-solid fa-arrow-pointer"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="service" id="service-3"><img src="/img/lawyer-services-3.jpg" alt="">
+                    <div class="lawyer-box">
+                        <div class="layer-services">
+                            <h1>All Services</h1>
+                            <div class="descr">Dolor sit amet consec tetur adipis cing elit sed do eiusmod tempor ut
+                                labore et magna aliqua.</div>
+                            <div class="view-more"><a href="">View More <i class="fa-solid fa-arrow-pointer"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
