Another features section added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,44 @@
                 </div>
             </div>
         </div>
+        <div class="our-features">
+            <div class="section1">
+                <div class="ourfeatures"><span>Our</span> Features</div>
+                <article>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>
+                    incididunt ut labore et dolore.</article>
+                <div class="support-btn" id="learn-more">Learn More</div>
+            </div>
+            <div class="section2">
+                <div class="subsec">
+                    <div class="icon">
+                        <i class="fa-solid fa-circle-info"></i>
+                    </div>
+                    <div class="details">
+                        <h2>Fastest Support</h2>
+                        <article>Sed ut unde omnis iste natus volur tatem accus antium laudan tium totam rem aperiam
+                            earue starter.</article>
+                    </div>
+                </div>
+                <div class="subsec">
+                    <div class="icon"><i class="fa-solid fa-receipt"></i></div>
+                    <div class="details">
+                        <h2>Fastest Support</h2>
+                        <article>Sed ut unde omnis iste natus volur tatem accus antium laudan tium totam rem aperiam
+                            earue starter.
+                        </article>
+                    </div>
+                </div>
+                <div class="subsec">
+                    <div class="icon"><i class="fa-solid fa-building-columns"></i></div>
+                    <div class="details">
+                        <h2>Fastest Support</h2>
+                        <article>Sed ut unde omnis iste natus volur tatem accus antium laudan tium totam rem aperiam
+                            earue starter.
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
