contact form added

--- a/index.html
+++ b/index.html
@@ -172,6 +172,50 @@
                 </div>
             </div>
         </div>
+        <div class="contact-info">
+            <div class="contact-mediums" id="medium-1">
+                <div class="con-icon"><i class="fa-solid fa-location-dot"></i></div>
+                <div class="con-detail">
+                    <h2>Address</h2>
+                    <p>Excepteur sint occaecat cupidatat
+                        non proident sunt in culpa.</p>
+                </div>
+            </div>
+            <div class="contact-mediums" id="medium-2">
+                <div class="con-icon"><i class="fa-solid fa-phone-volume"></i></div>
+                <div class="con-detail">
+                    <h2>Phone Number</h2>
+                    <p>0800 741 25 36</p>
+                </div>
+            </div>
+            <div class="contact-mediums" id="medium-3">
+                <div class="con-icon"><i class="fa-regular fa-comment-dots"></i></div>
+                <div class="con-detail">
+                    <h2>Email Address</h2>
+                    <p>demo@divi.express</p>
+                </div>
+
+            </div>
+            <div class="contact-mediums" id="medium-4">
+                <div class="con-icon"><i class="fa-solid fa-chess-board"></i></div>
+                <div class="con-detail">
+                    <h2>Open Hours</h2>
+                    <p>Weekdays: 10:00–18:00 <br>
+                        Weekend: Closed</p>
+                </div>
+            </div>
+        </div>
+        <div class="contact-form">
+            <div class="inputs">
+                <h1> Contact form</h1>
+                <form action="">
+                    <input type="text" placeholder="Name Surename">
+                    <input type="email" placeholder="Email Address">
+                    <input type="text" id="massege" placeholder="Type Your Message" maxlength="500">
+                    <input type="button" value="Send Message" class="message-btn">
+                </form>
+            </div>
+        </div>
     </body>
 
 </html>
