Some changes are made in code

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <form action="">
                     <input type="text" placeholder="Name Surename">
                     <input type="email" placeholder="Email Address">
-                    <input type="text" id="massege" placeholder="Type Your Message" maxlength="500">
+                    <textarea name="" id="" cols="5" rows="8" placeholder="Type Your Massege"></textarea>
                     <input type="button" value="Send Message" class="message-btn">
                 </form>
             </div>
