All the alignment issues are fixed

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="con-icon"><i class="fa-solid fa-chess-board"></i></div>
                 <div class="con-detail">
                     <h2>Open Hours</h2>
-                    <p>Weekdays: 10:00–18:00 <br>
+                    <p>Weekdays: 10:00-18:00 <br>
                         Weekend: Closed</p>
                 </div>
             </div>
