Project is ready

--- a/index.html
+++ b/index.html
@@ -83,6 +83,42 @@
                 </div>
             </div>
         </div>
+        <div class="layer-theme">
+            <div class="justic"><img src="/img/pexels-pavel-danilyuk-8112193.jpg" alt=""></div>
+            <div class="layout">
+                <div class="title">LAWYER THEMES & LAYOUTS</div>
+                <div class="layout-section" id="lay-section-1">
+                    <h1>Lawyer Company in NY</h1>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur excepteur sint
+                        occaecat cupidatat non proident sunt.</p>
+                </div>
+                <div class="layout-section" id="lay-section-2">
+                    <h3>Reliable Prices</h3>
+                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id
+                        exceur sante monar est
+                        laborum.</p>
+                </div>
+                <div class="layout-section" id="lay-section-3">
+                    <h3>Perfect Lawyers</h3>
+                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id
+                        exceur sante monar est
+                        laborum.</p>
+                </div>
+                <div class="layout-section" id="lay-section-4">
+                    <h3>Fastest Support</h3>
+                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id
+                        exceur sante monar est
+                        laborum.</p>
+                </div>
+                <div class="layout-section" id="lay-section-5">
+                    <h3>Quality Law Services</h3>
+                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id
+                        exceur sante monar est
+                        laborum.</p>
+                </div>
+            </div>
+        </div>
         <div class="support">
             <div class="support-content">
                 <div class="sendmsg"><span>Send</span> Massege</div>
